# revivel-companion

./: .gitignore  BUILD.md  DISTRIBUTION.md  Dockerfile  Dockerfile.windows-cross  INTEGRATION.md  LBRY_PROTOCOL_PROMPT_FOR_EXTENSION.md  LICENSE  README.md  compile-all.sh  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
version/changelogs/: 0.2.0.md
version/simple-versionlog/: 0.2.0.md
